# centroidtracker_ros

./: CMakeLists.txt  README.md  package.xml
launch/: centroidtracker_ros.launch  run.launch
msg/: Ctr.msg  Ctrs.msg
scripts/: centroidtracker.py  pub_centroidtracker_ros.py
